--- a/sample/index.html
+++ b/sample/index.html
@@ -1,24 +1,81 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
+  <head>
+    <title>Home</title>
+    <meta charset="utf-8" />
+    <meta name="description" content="Home" />
+    <meta name="author" content="Anand" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" />
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.countdown/2.2.0/jquery.countdown.min.js"></script>
+    <script src="scripts.js"></script>
+  </head>
 
-  <title>Home</title>
-  <meta name="description" content="Home">
-  <meta name="author" content="Anand">
+  <body>
+    
+    <header>
+      <div class="container pt-1 mx-auto">
+        <h1>Will be live soon!</h1>
+      </div>
+    </header>
 
-  <script type="application/javascript">
-    function getIP(json) {
-      document.write("Hello there! - Your Public IP address is: ", json.ip);
-      document.write("<br/> Hostname is: ",location.host);
-    }
-  </script>
-  
-  <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script>
-</head>
+    <div class="container py-5">
+      <div class="py-5">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <div class="rounded text-white shadow p-5 text-center mb-5">
+              <div
+                id="clock"
+                class="countdown-circles d-flex flex-wrap justify-content-center pt-4"
+              ></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-<body>
-  
-</body>
+    <footer>
+      <div class="container pt-1 mx-auto">
+        <h5>...Anand...</h5>
+      </div>
+    </footer>
+
+    <div class="w-full relative">
+      <div
+        class="custom-shape-divider"
+        style="transform: rotate(180deg); bottom: 0px;"
+      >
+        <svg
+          data-name="Layer 1"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 1200 120"
+          preserveAspectRatio="none"
+          class=""
+        >
+          <path
+            d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z"
+            class="shape-fill"
+            style="fill: rgb(255, 255, 255);"
+            opacity=".25"
+          ></path>
+          <path
+            d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z"
+            opacity=".5"
+            class="shape-fill"
+            style="fill: rgb(255, 255, 255);"
+          ></path>
+          <path
+            d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z"
+            class="shape-fill"
+            style="fill: rgb(255, 255, 255);"
+          ></path>
+        </svg>
+      </div>
+    </div>
+  </body>
 </html>
